--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^3.0.0
+  provider: ^4.0.0
+  intl: ^0.15.8
 
 
   # The following adds the Cupertino Icons font to your application.
